--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -18,6 +18,8 @@ sites:
     ipv6: true
   - name: GovText
     url: $GOVTEXT_SITE_URL
+    headers:
+    - "User-Agent: Better Uptime Bot Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.169 Safari/537.36"
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
